# brasa

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/brasa-bin/: Cargo.toml  README.md  link.ld
crates/brasa-bin/src/: main.rs
crates/casca/: Cargo.toml  README.md
crates/casca/src/: lib.rs
crates/folha/: Cargo.toml  README.md
crates/folha/src/: lib.rs
crates/galho/: Cargo.toml  README.md
crates/galho/src/: lib.rs
crates/raiz/: Cargo.toml  README.md
crates/raiz/src/: lib.rs
crates/raizame/: Cargo.toml  README.md
crates/raizame/src/: lib.rs
crates/seiva/: Cargo.toml  README.md
crates/seiva/src/: lib.rs
crates/semente/: Cargo.toml  README.md
crates/semente/src/: lib.rs
crates/tronco/: Cargo.toml  README.md
crates/tronco/src/: arch.rs  ipc.rs  lib.rs  mm.rs  sched.rs  syscall.rs  trap.rs
docs/: architecture.md  naming.md  roadmap.md  status.md  tracking.md  vision.md
docs/adrs/: 0001-capability-abi.md  0002-attestation-chain.md  0003-syscall-surface.md  0004-tatara-lisp-authoring.md  0005-nix-store-as-filesystem.md  0006-first-target-apple-silicon-kasou.md  0007-no-linux-abi.md  0008-open-source-from-day-zero.md  0009-wasm-wasi-first-class.md  README.md
