[package]
name = "tronco"
description = "brasa kernel core — memory, scheduler, IPC primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false  # kernel core is not a crates.io library; versioned via the brasa image

[features]
default = []
# Enables host-side testability: builds the crate with std and mocks the arch layer.
# Only use for unit tests in CI; kernel builds must have default features only.
# (proptest is a dev-dep — always available under `cargo test`, not feature-gated.)
testing = ["std"]
std = []

[lints]
workspace = true

[dependencies]
raiz     = { workspace = true }
seiva    = { workspace = true }
casca    = { workspace = true }
raizame  = { workspace = true }

bitflags = { workspace = true }
zerocopy = { workspace = true }
heapless = { workspace = true }
spin     = { workspace = true }
log      = { workspace = true }

# Per-arch primitives. Only aarch64 at Phase 0; x86_64 follows in Phase 6.
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu    = { workspace = true }
tock-registers = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
